# esp32-embassy-playground

./: .dockerignore  Cargo.toml  Dockerfile  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
src/: main.rs  xchg.rs
