[package]
name = "esp32c3-working"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt = "0.3.8"
esp-backtrace = { version = "0.12.0", features = ["defmt", "esp32c3", "exception-handler", "panic-handler"] }
esp-println = { version = "0.9.1", features = ["defmt-espflash", "esp32c3", "log"] }
embassy-executor = { version = "0.5.0" }
embassy-sync = "0.6.0"
embassy-time = { version = "0.3.1", default-features = false }
esp-hal = { version = "0.18.0", features = ["esp32c3"] }
esp-hal-embassy = { version = "0.1.0", features = ["esp32c3", "integrated-timers", "time-timg0"] }
heapless = "0.8.0"

[profile.release]
lto = true
strip = "debuginfo"
codegen-units = 1
incremental = false
