[package]
name = "esp32c3-working"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt = "0.3.8"
esp-backtrace = { version = "0.13.0", features = ["defmt", "esp32c3", "exception-handler", "panic-handler"] }
esp-println = { version = "0.10.0", features = ["defmt-espflash", "esp32c3", "log"] }
embassy-executor = { version = "0.5.0" }
embassy-sync = "0.6.0"
embassy-time = { version = "0.3.1", default-features = false }
esp-hal = { version = "0.18.0", features = ["esp32c3"] }
esp-hal-embassy = { version = "0.2.0", features = ["esp32c3", "integrated-timers", "time-timg0"] }
heapless = "0.8.0"

[profile.release]
lto = true
strip = "debuginfo"  # do not completely strip it otherwise defmt will not work
codegen-units = 1
