[package]
name = "esp32c3-working"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt = "0.3.10"
esp-backtrace = { version = "0.13.0", features = ["defmt", "esp32c3", "exception-handler", "panic-handler"] }
esp-println = { version = "0.10.0", features = ["defmt-espflash", "esp32c3", "log"] }
embassy-executor = { version = "0.5.0" }
embassy-sync = "0.7.0"
embassy-time = { version = "0.3.2", default-features = false }
heapless = "0.9.0"
esp-hal = { version = "0.19.0", features = ["esp32c3"] }
esp-hal-embassy = { version = "0.2.0", features = ["esp32c3", "integrated-timers"] }
static_cell = "2.1.0"

[profile.release]
lto = true
strip = "debuginfo"  # do not completely strip it otherwise defmt will not work
codegen-units = 1
